I don't know why I am pushing small changes

--- a/index.html
+++ b/index.html
@@ -282,39 +282,80 @@
                 <p>We have been working for best of the brands in India across different domains.
                     Currently our solutions is being used by more than 10000 field users in multiple industries.</p>
 
-                <div class="industry">Telecom</div>
-                <p class="description">To monitor people working out for providing tele-connections and building relationships.</p>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x orangered icon-phone"></i> Telecom</div>
+                        <p class="description">To monitor people working out for providing tele-connections and building
+                            relationships.</p>
+                    </div>
 
-                <div class="industry">Automobile</div>
-                <p class="description">To monitor what do the showrooms keep in display and to have an eye on the bounce rate of individual showrooms/workshops.</p>
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x blue icon-truck"></i> Automobile</div>
+                        <p class="description">To monitor what do the showrooms keep in display and to have an eye on
+                            the bounce rate of individual showrooms/workshops.</p>
+                    </div>
+                </div>
 
-                <div class="industry">Consumer Durables</div>
-                <p class="description">Companies can track the employees providing maintenance services to their products. <span class="strong">Whirlpool</span><sup>&reg;</sup> is our client
-                    using inField&trade; for the very same thing.</p>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x purple icon-shopping-cart"></i> Consumer Durables</div>
+                        <p class="description">Companies can track the employees providing maintenance services to their
+                            products. <span class="strong">Whirlpool</span><sup>&reg;</sup> is our client
+                            using inField&trade; for the very same thing.</p>
+                    </div>
 
-                <div class="industry">IT Sector</div>
-                <p class="description"></p>
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x green icon-laptop"></i> <i
+                                class="icon-2x brown icon-desktop"></i> IT Sector
+                        </div>
+                        <p class="description"></p>
+                    </div>
+                </div>
 
-                <div class="industry">Mobiles</div>
-                <p class="description"></p>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x orange icon-mobile-phone"></i> Mobiles</div>
+                        <p class="description"></p>
+                    </div>
 
-                <div class="industry">In-store Management</div>
-                <p class="description"></p>
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x green icon-building"></i> In-store Management</div>
+                        <p class="description"></p>
+                    </div>
+                </div>
 
-                <div class="industry">Channel Management</div>
-                <p class="description"></p>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x red icon-random"></i> Channel Management</div>
+                        <p class="description"></p>
+                    </div>
 
-                <div class="industry">Audit</div>
-                <p class="description"></p>
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x blue icon-search"></i> Audit</div>
+                        <p class="description"></p>
+                    </div>
+                </div>
 
-                <div class="industry">Banking & Finance</div>
-                <p class="description"></p>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x brown icon-inr"></i> <i
+                                class="icon-2x brown icon-money"></i> Banking & Finance
+                        </div>
+                        <p class="description"></p>
+                    </div>
 
-                <div class="industry">Service Management</div>
-                <p class="description"></p>
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x purple icon-briefcase"></i> Service Management</div>
+                        <p class="description"></p>
+                    </div>
+                </div>
 
-                <div class="industry">Infrastructure Monitoring</div>
-                <p class="description"></p>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="industry"><i class="icon-2x orangered icon-shield"></i> Infrastructure Monitoring</div>
+                        <p class="description"></p>
+                    </div>
+                </div>
             </div>
         </section>
 
