Further on #2, removed marquee behavior

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <link rel="stylesheet" href="css/colors.css">
-    <link rel="stylesheet" href="css/marquee.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body data-spy="scroll" data-target=".navbar">
@@ -383,22 +382,51 @@
                         <!--<img class="grayscale" src="assets/img/clients/Redington.png">-->
                         <!--<img class="grayscale" src="assets/img/clients/toshiba-logo.png">-->
                     <!--</marquee>-->
-                    <div class="marquee">
-                        <div class="scroller">
-                            <img class="grayscale" src="assets/img/clients/AIRTEL-LOGO.png">
-                            <img class="grayscale" src="assets/img/clients/whirlpool-logo.png">
-                            <img class="grayscale" src="assets/img/clients/canon-logo.png">
-                            <img class="grayscale" src="assets/img/clients/honeywell_logo.png">
-                            <img class="grayscale" src="assets/img/clients/Lenovo-Logo.png">
-                            <img class="grayscale" src="assets/img/clients/microsoft-logo.png">
-                            <img class="grayscale" src="assets/img/clients/philips_logo.png">
-                            <img class="grayscale" src="assets/img/clients/Logitech_logo.png">
-                            <img class="grayscale" src="assets/img/clients/apple-logo.png">
-                            <img class="grayscale" src="assets/img/clients/Havells_Logo.png">
-                            <img class="grayscale" src="assets/img/clients/ingram-micro-logo.png">
-                            <img class="grayscale" src="assets/img/clients/Redington.png">
-                            <img class="grayscale" src="assets/img/clients/toshiba-logo.png">
+
+                    <!--<div class="marquee">-->
+                        <!--<div class="scroller">-->
+                            <!--<img class="grayscale" src="assets/img/clients/AIRTEL-LOGO.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/whirlpool-logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/canon-logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/honeywell_logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/Lenovo-Logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/microsoft-logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/philips_logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/Logitech_logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/apple-logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/Havells_Logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/ingram-micro-logo.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/Redington.png">-->
+                            <!--<img class="grayscale" src="assets/img/clients/toshiba-logo.png">-->
+                        <!--</div>-->
+                    <!--</div>-->
+
+                    <div class="team-member span3">
+                        <div class="description hide">
+                            <span>Whirlpool India</span>
+                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81"><span class="link">Read more</span> <i class="blue icon-chevron-right"></i></p>
                         </div>
+                        <img src="assets/img/clients/whirlpool-logo.png">
+                    </div>
+
+                    <div class="team-member span3">
+                        <div class="description hide">
+                            <span>AirTel Money</span>
+                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81"><span class="link">Read more</span> <i class="blue icon-chevron-right"></i></p>
+                        </div>
+                        <img src="assets/img/clients/AIRTEL-LOGO.png">
+                    </div>
+
+                    <div class="team-member span3">
+                        <div class="description hide">
+                            <span>It's not said enough until it's said 10 times</span>
+                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81"><span class="link">Read more</span> <i class="blue icon-chevron-right"></i></p>
+                        </div>
+                        <img src="assets/img/clients/honeywell_logo.png">
+                    </div>
+
+                    <div class="span3">
+                        <img class="in-link link grayscale" data-href="pages/clients.html" src="assets/img/clients/more.png">
                     </div>
                 </div>
             </div>
