Getting away from marquee

--- a/index.html
+++ b/index.html
@@ -367,60 +367,26 @@
                 Currently our solutions is being used by more than 10000 field users for multiple brands.</p>
                 <p>Some of our prestigious clients are listed below.</p>
                 <div class="clients row-fluid">
-                    <!--<marquee behavior="alternate" direction="left" scrollamount="5">-->
-                        <!--<img class="grayscale" src="assets/img/clients/AIRTEL-LOGO.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/whirlpool-logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/canon-logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/honeywell_logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/Lenovo-Logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/microsoft-logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/philips_logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/Logitech_logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/apple-logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/Havells_Logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/ingram-micro-logo.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/Redington.png">-->
-                        <!--<img class="grayscale" src="assets/img/clients/toshiba-logo.png">-->
-                    <!--</marquee>-->
-
-                    <!--<div class="marquee">-->
-                        <!--<div class="scroller">-->
-                            <!--<img class="grayscale" src="assets/img/clients/AIRTEL-LOGO.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/whirlpool-logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/canon-logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/honeywell_logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/Lenovo-Logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/microsoft-logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/philips_logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/Logitech_logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/apple-logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/Havells_Logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/ingram-micro-logo.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/Redington.png">-->
-                            <!--<img class="grayscale" src="assets/img/clients/toshiba-logo.png">-->
-                        <!--</div>-->
-                    <!--</div>-->
-
-                    <div class="team-member span3">
+                    <div class="client flip-img-container  span3">
                         <div class="description hide">
                             <span>Whirlpool India</span>
-                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81"><span class="link">Read more</span> <i class="blue icon-chevron-right"></i></p>
+                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81">Read more <i class="blue icon-chevron-right"></i></p>
                         </div>
                         <img src="assets/img/clients/whirlpool-logo.png">
                     </div>
 
-                    <div class="team-member span3">
+                    <div class="client flip-img-container span3">
                         <div class="description hide">
                             <span>AirTel Money</span>
-                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81"><span class="link">Read more</span> <i class="blue icon-chevron-right"></i></p>
+                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81">Read more <i class="blue icon-chevron-right"></i></p>
                         </div>
                         <img src="assets/img/clients/AIRTEL-LOGO.png">
                     </div>
 
-                    <div class="team-member span3">
+                    <div class="client flip-img-container span3">
                         <div class="description hide">
-                            <span>It's not said enough until it's said 10 times</span>
-                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81"><span class="link">Read more</span> <i class="blue icon-chevron-right"></i></p>
+                            <span>Honeywell&reg; uses inField&trade; to manage their FOS.</span>
+                            <p class="in-link" data-href="http://www.twitter.com/lalitgarg81">Read more <i class="blue icon-chevron-right"></i></p>
                         </div>
                         <img src="assets/img/clients/honeywell_logo.png">
                     </div>
@@ -457,7 +423,7 @@
                 This team consists of following rock-stars.
                 <div class="team">
                     <div class="row-fluid">
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>The BOSS</span>
                                 <p>
@@ -466,12 +432,12 @@
                                     <!--<i class="out-link icon-2x icon-github-sign" data-href="https://www.github.com/shuklaalok7"></i>-->
                                 </p>
                             </div>
-                            <img src="assets/img/team/chiragMittal.jpg">
+                            <img src="http://graph.facebook.com/chirag87/picture?type=large&width=225&height=225">
                             <div class="name">Chirag Mittal</div>
                             <div class="designation">Founder & MD</div>
                         </div>
 
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>The Eskimo</span>
                                 <p>
@@ -480,12 +446,12 @@
                                     <i class="out-link icon-2x icon-github-sign" data-href="https://www.github.com/shuklaalok7"></i>
                                 </p>
                             </div>
-                            <img src="assets/img/team/AlokShukla.png" class="no-shadow">
+                            <img src="http://graph.facebook.com/shuklaalok7/picture?type=large&width=225&height=225" class="">
                             <div class="name">Alok Shukla</div>
-                            <div class="designation">Developer</div>
+                            <div class="designation">Mobile Developer</div>
                         </div>
 
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>Latest man</span>
                                 <p>
@@ -494,12 +460,12 @@
                                     <i class="out-link icon-2x icon-github-sign" data-href="https://www.github.com/prakhar7"></i>
                                 </p>
                             </div>
-                            <img src="assets/img/team/PrakharGupta.png" class="no-shadow">
+                            <img src="http://graph.facebook.com/prakhar7/picture?type=large&width=225&height=225" class="">
                             <div class="name">Prakhar Gupta</div>
                             <div class="designation">Product Engineer</div>
                         </div>
 
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>It's not said enough until it's said 10 times</span>
                                 <p>
@@ -507,14 +473,14 @@
                                     <i class="out-link icon-2x icon-linkedin-sign" data-href="http://in.linkedin.com/pub/lalit-garg/7a/170/a97"></i>
                                 </p>
                             </div>
-                            <img src="assets/img/team/LalitGarg.png">
+                            <img src="http://graph.facebook.com/lalit.garg.5220/picture?type=large&width=225&height=225">
                             <div class="name">Lalit Garg</div>
                             <div class="designation">Sales Director</div>
                         </div>
                     </div>
 
                     <div class="row-fluid">
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>Yamla, pagla, deewana jaat</span>
                                 <p>
@@ -523,12 +489,12 @@
                                     <!--<i class="out-link icon-2x icon-github-sign" data-href="https://www.github.com/shuklaalok7"></i>-->
                                 </p>
                             </div>
-                            <img src="assets/img/team/dinesh.jpg">
+                            <img src="http://graph.facebook.com/dinesh.mahlawat/picture?type=large&width=225&height=225">
                             <div class="name">Dinesh Mahlawat</div>
                             <div class="designation">Sr Developer</div>
                         </div>
 
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>No stop codon during food ingestion</span>
                                 <p>
@@ -537,12 +503,12 @@
                                     <!--<i class="out-link icon-2x icon-github-sign" data-href="https://www.github.com/prakhar7"></i>-->
                                 </p>
                             </div>
-                            <img src="assets/img/team/SandeepDuhan.png">
+                            <img src="http://graph.facebook.com/sunny.duhan.7/picture?type=large&width=225&height=225">
                             <div class="name">Sandeep Duhan</div>
-                            <div class="designation">Developer</div>
+                            <div class="designation">Android droid</div>
                         </div>
 
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>It's not a phone, it's THE iPhone ringing</span>
                                 <p>
@@ -551,45 +517,45 @@
                                     <!--<i class="out-link icon-2x icon-github-sign" data-href="https://www.github.com/shuklaalok7"></i>-->
                                 </p>
                             </div>
-                            <img src="assets/img/team/VipinMittal.png">
+                            <img src="http://graph.facebook.com/vipssmittal/picture?type=large&width=225&height=225">
                             <div class="name">Vipin Mittal</div>
                             <div class="designation">Data Engineer</div>
                         </div>
 
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>With built-in GPS</span>
                                 <p>
                                     <i class="out-link icon-2x icon-linkedin-sign" data-href="https://www.linkedin.com/pub/tanya-gupta/78/760/a3b"></i>
                                 </p>
                             </div>
-                            <img src="assets/img/team/TanyaGupta.png">
+                            <img src="http://graph.facebook.com/tanya0503/picture?type=large&width=225&height=225">
                             <div class="name">Tanya Gupta</div>
                             <div class="designation">Developer</div>
                         </div>
                     </div>
 
                     <div class="row-fluid">
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
                                 <span>Soon to wed</span>
                                 <p>
                                     <i class="out-link icon-2x icon-linkedin-sign" data-href="http://in.linkedin.com/pub/simmi-singla/97/870/108"></i>
                                 </p>
                             </div>
-                            <img src="assets/img/team/SimmiSingla.png">
+                            <img src="http://graph.facebook.com/simmi.singla.98/picture?type=large&width=225&height=225">
                             <div class="name">Simmi Singla</div>
                             <div class="designation">Designer</div>
                         </div>
 
-                        <div class="team-member span3">
+                        <div class="team-member flip-img-container span3">
                             <div class="description hide">
-                                <span>Ek panjaban</span>
+                                <span>Kitty pitty</span>
                                 <p>
                                     <i class="out-link icon-2x icon-linkedin-sign" data-href="http://in.linkedin.com/pub/kirti-arora/74/549/43b"></i>
                                 </p>
                             </div>
-                            <img src="assets/img/team/kirti_arora.jpg">
+                            <img src="http://graph.facebook.com/kirti.arora.14606/picture?type=large&width=225&height=225">
                             <div class="name">Kirti Arora</div>
                             <div class="designation">Relationship Engineer</div>
                         </div>
@@ -639,6 +605,7 @@
         var homePageCarousel = $('#homePageCarousel');
 
         var navWrapper = $('.nav-outer');
+        var flipImageIntervalId = 0;
         var navigationLinksContainer = navWrapper.find('.nav.navbar-nav');
         var messageInNavBar = navWrapper.find('.nav.message');
 
@@ -677,19 +644,6 @@
 //                }
             });
         };
-
-        body.on('mouseenter', '.team-member img', function(e) {
-            $(this).removeClass('flipInY').addClass('animated flipOutY');
-            $(this).closest('.team-member').find('.description').removeClass('flipOutY hide').addClass('animated flipInY');
-        });
-
-        body.on('mouseout', '.team-member .description', function(e) {
-            var toElement = $(e.toElement);
-            if(!toElement.hasClass('description') && !toElement.closest('.description').length) {
-                $(this).closest('.team-member').find('img').removeClass('flipOutY').addClass('flipInY');
-                $(this).removeClass('flipInY').addClass('flipOutY');
-            }
-        });
 
         body.on('click', '.navbar-default a.scroll', function(e) {
             $(window).scrollTop($(window).scrollTop()+76);
