Added GitHub profile link to @tanyagupta503 #4

--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
                                 <span>With built-in GPS</span>
                                 <p>
                                     <i class="out-link icon-2x icon-linkedin-sign" data-href="https://www.linkedin.com/pub/tanya-gupta/78/760/a3b"></i>
+                                    <i class="out-link icon-2x icon-github-sign" data-href="https://www.github.com/tanyagupta503"></i>
                                 </p>
                             </div>
                             <img src="http://graph.facebook.com/tanya0503/picture?type=large&width=225&height=225">
